Add domain configuration support for production deployment
- Added API_DOMAIN option in .env.example for production domains
- Updated api_config.py with get_base_url() function
- Updated README.md to show both localhost and domain examples
- Updated QUICKSTART.md with local vs production URL options
- All documentation now supports both development and production URLs

Users can now easily switch between localhost and their domain by setting API_DOMAIN in .env

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,22 @@
-# Amazon Scraper API Configuration
+# AmazonScraper API Environment Configuration
+# Copy this file to .env and update with your values
 
-# API Server Settings
+# API Server Configuration
 API_HOST=0.0.0.0
 API_PORT=5000
-API_KEY=your_secret_api_key_here
-
-# Application Settings
 DEBUG_MODE=True
 
-# CORS Settings (comma-separated domains)
+# Domain Configuration (Optional)
+# For local development: leave empty or use http://localhost:5000
+# For production: use your domain like https://api.yourdomain.com
+API_DOMAIN=
+
+# Security - IMPORTANT: Change this to a secure random string!
+# Generate a secure key: python -c "import secrets; print(secrets.token_urlsafe(32))"
+API_KEY=your_secure_api_key_here
+
+# CORS - Allowed origins (comma-separated)
+# Add your frontend domain(s) here
 ALLOWED_ORIGINS=http://localhost,http://127.0.0.1,http://localhost:8000
 
 # Browser Settings
