Update CORS configuration comment for production domains

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ API_KEY=your_secure_api_key_here
 
 # CORS - Allowed origins (comma-separated)
 # Add your frontend domain(s) here
+# For production: add your actual domains (e.g., https://yourdomain.com,https://app.yourdomain.com)
 ALLOWED_ORIGINS=http://localhost,http://127.0.0.1,http://localhost:8000
 
 # Browser Settings
