--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,48 @@ API_DOMAIN=
 # Security - IMPORTANT: Change this to a secure random string!
 # Generate a secure key: python -c "import secrets; print(secrets.token_urlsafe(32))"
 API_KEY=your_secure_api_key_here
+# Optional: rotate/allow multiple keys (comma-separated)
+API_KEYS=
+
+# Optional JWT auth
+ENABLE_JWT=False
+JWT_SECRET=
 
 # CORS - Allowed origins (comma-separated)
 # Add your frontend domain(s) here
 # For production: add your actual domains (e.g., https://yourdomain.com,https://app.yourdomain.com)
 ALLOWED_ORIGINS=http://localhost,http://127.0.0.1,http://localhost:8000
 
+# Auto-derive ALLOWED_ORIGINS from API_DOMAIN when not set
+AUTO_ORIGIN_FROM_DOMAIN=True
+
 # Browser Settings
-HEADLESS_MODE=False
-BROWSER_TIMEOUT=30
+HEADLESS_MODE=True
+SCRAPE_TIMEOUT_SECONDS=30
+SCRAPE_MAX_RETRIES=2
+MAX_CONCURRENCY=3
+
+# Proxy support (comma-separated proxy URLs, e.g. http://user:pass@host:port)
+PROXY_URLS=
+
+# Rate limiting
+RATE_LIMIT_PER_MINUTE_KEY=60
+RATE_LIMIT_PER_MINUTE_IP=120
+
+# Cache
+CACHE_TTL_SECONDS=300
+CACHE_MAX_ITEMS=1000
+
+# Request limits
+MAX_CONTENT_LENGTH_MB=1
+
+# Readiness checks
+READY_CHECK_ASIN=
+READY_CHECK_COUNTRY=US
+READY_CHECK_INTERVAL_SECONDS=900
+
+# Logging
+LOG_LEVEL=INFO
+
+# Config validation
+STRICT_ENV_VALIDATE=False
